# set(OpenCV_DIR /home/jeff/文档/opencv/opencv-3.4.1/build)

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES({OpenCV_INCLUDE_DIRS})

AUX_SOURCE_DIRECTORY(. SRC_LIST)

ADD_EXECUTABLE(hello ${SRC_LIST})

set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

TARGET_LINK_LIBRARIES(hello ${OpenCV_LIBS})
